# qt_two_forms

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  second_dialog.h
src/: CMakeLists.txt  mainwindow.cpp  second_dialog.cpp
